# gitlab-upgrade-helper

./: README.md  pyproject.toml
config/: production.yaml
src/gitlab_upgrade_helper/: cli.py  config.py
templates/: gitlab.rb.j2
