[project]
name = "gitlab-upgrade-helper"
version = "0.1.0"
description = ""
authors = [
    {name = "Nir Salman Levy",email = "levyn96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "fabric (>=3.2.2,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "gitlab_upgrade_helper", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gitlab-helper = "gitlab_upgrade_helper.cli:cli"